# quotient-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py  test_client.py
.github/workflows/: build-and-push-image.yml
example_configs/: README.md
example_configs/.cursor/rules/: evaluate-tool-calls.mdc
examples/.cursor/: README.md  mcp.json
examples/.cursor/rules/: evaluate-tool-call.mdc
examples/amp/: AGENT.md  README.md  examples.json
examples/claude_code/: CLAUDE.md  README.md
examples/claude_desktop/: README.md  claude_desktop_config.json
examples/openai_agent_sdk/: README.md  agent.py  requirements.txt
