[project]
name = "quotient-mcp"
version = "0.1.0"
description = "Quotient MCP Server"
readme = "README.md"
package-mode = false
requires-python = ">=3.10, <4.0"
dependencies = [
    "fastmcp>=2.10.6",
    "mcp==1.12.2",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "ruff",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
